--- a/everglades_bigcypress_fireviz.Rmd
+++ b/everglades_bigcypress_fireviz.Rmd
@@ -164,7 +164,7 @@ p3<-ggplot(n, aes(x=plot_date, y=ControlAcres, fill = NEWCAT)) +
         legend.position='none',
         axis.title.y = element_text(colour='gray98', size=14)) +
   xlab("") +
-  ylab("Acres burned") +
+  ylab("Average acres burned") +
   scale_fill_manual(values=pal)
 
 
